crates/parser/src/tests/snapshots/kcl_parser__tests__file__config_expr_2.snap
---
source: crates/parser/src/tests/file.rs
expression: "$crate :: tests :: parsing_file_string(\"testdata/config_expr-02.k\")"
---
{
  "filename": "config_expr-02.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "config",
                "filename": "config_expr-02.k",
                "line": 1,
                "column": 0,
                "end_line": 1,
                "end_column": 6
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "config_expr-02.k",
            "line": 1,
            "column": 0,
            "end_line": 1,
            "end_column": 6
          }
        ],
        "value": {
          "node": {
            "type": "Config",
            "items": [
              {
                "node": {
                  "key": {
                    "node": {
                      "type": "Identifier",
                      "names": [
                        {
                          "node": "k1",
                          "filename": "config_expr-02.k",
                          "line": 2,
                          "column": 4,
                          "end_line": 2,
                          "end_column": 6
                        }
                      ],
                      "pkgpath": "",
                      "ctx": "Load"
                    },
                    "filename": "config_expr-02.k",
                    "line": 2,
                    "column": 4,
                    "end_line": 2,
                    "end_column": 6
                  },
                  "value": {
                    "node": {
                      "type": "NumberLit",
                      "binary_suffix": null,
                      "value": {
                        "type": "Int",
                        "value": 111
                      }
                    },
                    "filename": "config_expr-02.k",
                    "line": 2,
                    "column": 9,
                    "end_line": 2,
                    "end_column": 12
                  },
                  "operation": "Override"
                },
                "filename": "config_expr-02.k",
                "line": 2,
                "column": 4,
                "end_line": 2,
                "end_column": 12
              },
              {
                "node": {
                  "key": {
                    "node": {
                      "type": "Identifier",
                      "names": [
                        {
                          "node": "k2",
                          "filename": "config_expr-02.k",
                          "line": 3,
                          "column": 4,
                          "end_line": 3,
                          "end_column": 6
                        }
                      ],
                      "pkgpath": "",
                      "ctx": "Load"
                    },
                    "filename": "config_expr-02.k",
                    "line": 3,
                    "column": 4,
                    "end_line": 3,
                    "end_column": 6
                  },
                  "value": {
                    "node": {
                      "type": "NumberLit",
                      "binary_suffix": null,
                      "value": {
                        "type": "Int",
                        "value": 222
                      }
                    },
                    "filename": "config_expr-02.k",
                    "line": 3,
                    "column": 9,
                    "end_line": 3,
                    "end_column": 12
                  },
                  "operation": "Override"
                },
                "filename": "config_expr-02.k",
                "line": 3,
                "column": 4,
                "end_line": 3,
                "end_column": 12
              }
            ]
          },
          "filename": "config_expr-02.k",
          "line": 1,
          "column": 9,
          "end_line": 4,
          "end_column": 1
        },
        "ty": null
      },
      "filename": "config_expr-02.k",
      "line": 1,
      "column": 0,
      "end_line": 4,
      "end_column": 1
    }
  ],
  "comments": []
}
