crates/parser/src/tests/snapshots/kcl_parser__tests__file__if_2.snap
---
source: crates/parser/src/tests/file.rs
expression: "$crate :: tests :: parsing_file_string(\"testdata/if-02.k\")"
---
{
  "filename": "if-02.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "a",
                "filename": "if-02.k",
                "line": 1,
                "column": 0,
                "end_line": 1,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "if-02.k",
            "line": 1,
            "column": 0,
            "end_line": 1,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 1
            }
          },
          "filename": "if-02.k",
          "line": 1,
          "column": 4,
          "end_line": 1,
          "end_column": 5
        },
        "ty": null
      },
      "filename": "if-02.k",
      "line": 1,
      "column": 0,
      "end_line": 1,
      "end_column": 5
    },
    {
      "node": {
        "type": "If",
        "body": [
          {
            "node": {
              "type": "Assign",
              "targets": [
                {
                  "node": {
                    "name": {
                      "node": "bbb",
                      "filename": "if-02.k",
                      "line": 4,
                      "column": 4,
                      "end_line": 4,
                      "end_column": 7
                    },
                    "paths": [],
                    "pkgpath": ""
                  },
                  "filename": "if-02.k",
                  "line": 4,
                  "column": 4,
                  "end_line": 4,
                  "end_column": 7
                }
              ],
              "value": {
                "node": {
                  "type": "NumberLit",
                  "binary_suffix": null,
                  "value": {
                    "type": "Int",
                    "value": 2
                  }
                },
                "filename": "if-02.k",
                "line": 4,
                "column": 10,
                "end_line": 4,
                "end_column": 11
              },
              "ty": null
            },
            "filename": "if-02.k",
            "line": 4,
            "column": 4,
            "end_line": 4,
            "end_column": 11
          }
        ],
        "cond": {
          "node": {
            "type": "Identifier",
            "names": [
              {
                "node": "a",
                "filename": "if-02.k",
                "line": 3,
                "column": 3,
                "end_line": 3,
                "end_column": 4
              }
            ],
            "pkgpath": "",
            "ctx": "Load"
          },
          "filename": "if-02.k",
          "line": 3,
          "column": 3,
          "end_line": 3,
          "end_column": 4
        },
        "orelse": [
          {
            "node": {
              "type": "If",
              "body": [
                {
                  "node": {
                    "type": "Assign",
                    "targets": [
                      {
                        "node": {
                          "name": {
                            "node": "ccc",
                            "filename": "if-02.k",
                            "line": 6,
                            "column": 4,
                            "end_line": 6,
                            "end_column": 7
                          },
                          "paths": [],
                          "pkgpath": ""
                        },
                        "filename": "if-02.k",
                        "line": 6,
                        "column": 4,
                        "end_line": 6,
                        "end_column": 7
                      }
                    ],
                    "value": {
                      "node": {
                        "type": "NumberLit",
                        "binary_suffix": null,
                        "value": {
                          "type": "Int",
                          "value": 3
                        }
                      },
                      "filename": "if-02.k",
                      "line": 6,
                      "column": 10,
                      "end_line": 6,
                      "end_column": 11
                    },
                    "ty": null
                  },
                  "filename": "if-02.k",
                  "line": 6,
                  "column": 4,
                  "end_line": 6,
                  "end_column": 11
                }
              ],
              "cond": {
                "node": {
                  "type": "Binary",
                  "left": {
                    "node": {
                      "type": "Identifier",
                      "names": [
                        {
                          "node": "a",
                          "filename": "if-02.k",
                          "line": 5,
                          "column": 5,
                          "end_line": 5,
                          "end_column": 6
                        }
                      ],
                      "pkgpath": "",
                      "ctx": "Load"
                    },
                    "filename": "if-02.k",
                    "line": 5,
                    "column": 5,
                    "end_line": 5,
                    "end_column": 6
                  },
                  "op": "Add",
                  "right": {
                    "node": {
                      "type": "NumberLit",
                      "binary_suffix": null,
                      "value": {
                        "type": "Int",
                        "value": 10
                      }
                    },
                    "filename": "if-02.k",
                    "line": 5,
                    "column": 9,
                    "end_line": 5,
                    "end_column": 11
                  }
                },
                "filename": "if-02.k",
                "line": 5,
                "column": 5,
                "end_line": 5,
                "end_column": 11
              },
              "orelse": [
                {
                  "node": {
                    "type": "If",
                    "body": [
                      {
                        "node": {
                          "type": "Assign",
                          "targets": [
                            {
                              "node": {
                                "name": {
                                  "node": "ddd",
                                  "filename": "if-02.k",
                                  "line": 8,
                                  "column": 4,
                                  "end_line": 8,
                                  "end_column": 7
                                },
                                "paths": [],
                                "pkgpath": ""
                              },
                              "filename": "if-02.k",
                              "line": 8,
                              "column": 4,
                              "end_line": 8,
                              "end_column": 7
                            }
                          ],
                          "value": {
                            "node": {
                              "type": "NumberLit",
                              "binary_suffix": null,
                              "value": {
                                "type": "Int",
                                "value": 4
                              }
                            },
                            "filename": "if-02.k",
                            "line": 8,
                            "column": 10,
                            "end_line": 8,
                            "end_column": 11
                          },
                          "ty": null
                        },
                        "filename": "if-02.k",
                        "line": 8,
                        "column": 4,
                        "end_line": 8,
                        "end_column": 11
                      }
                    ],
                    "cond": {
                      "node": {
                        "type": "Binary",
                        "left": {
                          "node": {
                            "type": "Identifier",
                            "names": [
                              {
                                "node": "a",
                                "filename": "if-02.k",
                                "line": 7,
                                "column": 5,
                                "end_line": 7,
                                "end_column": 6
                              }
                            ],
                            "pkgpath": "",
                            "ctx": "Load"
                          },
                          "filename": "if-02.k",
                          "line": 7,
                          "column": 5,
                          "end_line": 7,
                          "end_column": 6
                        },
                        "op": "Add",
                        "right": {
                          "node": {
                            "type": "NumberLit",
                            "binary_suffix": null,
                            "value": {
                              "type": "Int",
                              "value": 100
                            }
                          },
                          "filename": "if-02.k",
                          "line": 7,
                          "column": 9,
                          "end_line": 7,
                          "end_column": 12
                        }
                      },
                      "filename": "if-02.k",
                      "line": 7,
                      "column": 5,
                      "end_line": 7,
                      "end_column": 12
                    },
                    "orelse": [
                      {
                        "node": {
                          "type": "Assign",
                          "targets": [
                            {
                              "node": {
                                "name": {
                                  "node": "eee",
                                  "filename": "if-02.k",
                                  "line": 10,
                                  "column": 4,
                                  "end_line": 10,
                                  "end_column": 7
                                },
                                "paths": [],
                                "pkgpath": ""
                              },
                              "filename": "if-02.k",
                              "line": 10,
                              "column": 4,
                              "end_line": 10,
                              "end_column": 7
                            }
                          ],
                          "value": {
                            "node": {
                              "type": "NumberLit",
                              "binary_suffix": null,
                              "value": {
                                "type": "Int",
                                "value": 5
                              }
                            },
                            "filename": "if-02.k",
                            "line": 10,
                            "column": 10,
                            "end_line": 10,
                            "end_column": 11
                          },
                          "ty": null
                        },
                        "filename": "if-02.k",
                        "line": 10,
                        "column": 4,
                        "end_line": 10,
                        "end_column": 11
                      },
                      {
                        "node": {
                          "type": "Assign",
                          "targets": [
                            {
                              "node": {
                                "name": {
                                  "node": "fff",
                                  "filename": "if-02.k",
                                  "line": 11,
                                  "column": 4,
                                  "end_line": 11,
                                  "end_column": 7
                                },
                                "paths": [],
                                "pkgpath": ""
                              },
                              "filename": "if-02.k",
                              "line": 11,
                              "column": 4,
                              "end_line": 11,
                              "end_column": 7
                            }
                          ],
                          "value": {
                            "node": {
                              "type": "NumberLit",
                              "binary_suffix": null,
                              "value": {
                                "type": "Int",
                                "value": 6
                              }
                            },
                            "filename": "if-02.k",
                            "line": 11,
                            "column": 10,
                            "end_line": 11,
                            "end_column": 11
                          },
                          "ty": null
                        },
                        "filename": "if-02.k",
                        "line": 11,
                        "column": 4,
                        "end_line": 11,
                        "end_column": 11
                      }
                    ]
                  },
                  "filename": "if-02.k",
                  "line": 7,
                  "column": 0,
                  "end_line": 11,
                  "end_column": 11
                }
              ]
            },
            "filename": "if-02.k",
            "line": 5,
            "column": 0,
            "end_line": 11,
            "end_column": 11
          }
        ]
      },
      "filename": "if-02.k",
      "line": 3,
      "column": 0,
      "end_line": 11,
      "end_column": 12
    }
  ],
  "comments": []
}
