crates/parser/src/tests/snapshots/kcl_parser__tests__file__if_3.snap
---
source: crates/parser/src/tests/file.rs
expression: "$crate :: tests :: parsing_file_string(\"testdata/if-03.k\")"
---
{
  "filename": "if-03.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "If",
        "body": [
          {
            "node": {
              "type": "Assign",
              "targets": [
                {
                  "node": {
                    "name": {
                      "node": "a",
                      "filename": "if-03.k",
                      "line": 1,
                      "column": 9,
                      "end_line": 1,
                      "end_column": 10
                    },
                    "paths": [],
                    "pkgpath": ""
                  },
                  "filename": "if-03.k",
                  "line": 1,
                  "column": 9,
                  "end_line": 1,
                  "end_column": 10
                }
              ],
              "value": {
                "node": {
                  "type": "NumberLit",
                  "binary_suffix": null,
                  "value": {
                    "type": "Int",
                    "value": 1
                  }
                },
                "filename": "if-03.k",
                "line": 1,
                "column": 13,
                "end_line": 1,
                "end_column": 14
              },
              "ty": null
            },
            "filename": "if-03.k",
            "line": 1,
            "column": 9,
            "end_line": 1,
            "end_column": 14
          }
        ],
        "cond": {
          "node": {
            "type": "NameConstantLit",
            "value": "True"
          },
          "filename": "if-03.k",
          "line": 1,
          "column": 3,
          "end_line": 1,
          "end_column": 7
        },
        "orelse": []
      },
      "filename": "if-03.k",
      "line": 1,
      "column": 0,
      "end_line": 1,
      "end_column": 15
    }
  ],
  "comments": []
}
